mdapipkg/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Base_Amount__c</fullName>
        <label>Base Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description_Historical__c</fullName>
        <label>Description (Historical)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extended_Amount__c</fullName>
        <label>Extended Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Date_Start__c</fullName>
        <formula>PricebookEntry.Product2.Fiscal_Date_Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Date Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GUID_c__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Price_Overriden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Price Overriden?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ContractEffectiveDate__c</fullName>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ContractEndDate__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KGRenewal__DiscountTarget__c</fullName>
        <label>Discount Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__IsAddedToRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Added To Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__IsLockedInCart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Locked In Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__IsRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Opportunity Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__IsRenewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__IsSalesPathManuallySet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If true, the Sales Path was manually set by merging Sales Paths together and will not be updated if the dates on this line item change.</inlineHelpText>
        <label>Sales Path Manually Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ListTermTotalPrice__c</fullName>
        <formula>IF( PricebookEntry.Product2.KGRenewal__Subscription__c, ((ListPrice * ( KGRenewal__Term__c /  PricebookEntry.Product2.KGRenewal__PriceTerm__c )) * (1-Discount) * Quantity), ListPrice * (1 - Discount) * Quantity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KGRenewal__LockedListPrice__c</fullName>
        <label>Locked List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KGRenewal__LockedPriceTerm__c</fullName>
        <description>When Locked Price Term has a value, pricing will be based on Locked Price Term instead of Term.</description>
        <label>Locked Price Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__LockedPricingEndDate__c</fullName>
        <description>Field is deprecated. This field is replaced by Locked Price Term.</description>
        <label>Locked Pricing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__OverrideEncore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Encore Calculations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__PriceBasis__c</fullName>
        <label>Price Basis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__PriceModifierType__c</fullName>
        <label>Price Modifier Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__PriceModifier__c</fullName>
        <label>Price Modifier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__PriceTableModifier__c</fullName>
        <label>Price Table Modifier</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__RetroactivePriceTableModifier__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Retroactive Price Table Modifier</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__SalesPath__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Path</label>
        <referenceTo>KGRenewal__SalesPath__c</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingCity__c</fullName>
        <label>Shipping City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingCountry__c</fullName>
        <label>Shipping Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingFirstName__c</fullName>
        <label>Shipping First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingLastName__c</fullName>
        <label>Shipping Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingOrganization__c</fullName>
        <label>Shipping Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingPostalCode__c</fullName>
        <label>Shipping Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingState__c</fullName>
        <label>Shipping State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingStreet1__c</fullName>
        <label>Shipping Street Address (Line 1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingStreet2__c</fullName>
        <label>Shipping Street Address (Line 2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__SuppressRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field ensures this product will not be renewed.</description>
        <inlineHelpText>Checking this field ensures this product will not be renewed.</inlineHelpText>
        <label>Suppress Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__TaxAmount__c</fullName>
        <label>Tax Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KGRenewal__TermInDays__c</fullName>
        <label>Term (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Term__c</fullName>
        <description>For subscription products, this is the length of the subscription.</description>
        <inlineHelpText>For subscription products, this is the length of the subscription.</inlineHelpText>
        <label>Term (months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manual_Discount_Amount__c</fullName>
        <label>Manual Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OLI_Edited__c</fullName>
        <formula>If( DATEVALUE( CreatedDate )&lt;&gt; DATEVALUE(LastModifiedDate)  , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OLI Edited?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Family )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Worldaware_YPO_Gold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OLI is complementary Worldaware YPO Gold member benefit</description>
        <inlineHelpText>OLI is complementary Worldaware YPO Gold member benefit</inlineHelpText>
        <label>Worldaware YPO Gold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YNG_Members__c</fullName>
        <label>YNG+ Members</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>YNG_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OLI is YNG+ member benefit</description>
        <inlineHelpText>OLI is YNG+ member benefit</inlineHelpText>
        <label>YNG Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YPO_Universal_Member_Benefit__c</fullName>
        <formula>IF(PricebookEntry.Product2.YPO_Universal_Member_Benefit__c = TRUE, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YPO Universal Member Benefit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAGeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Product GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Opportunity Line Items</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>YNG_Child_Age_Validation</fullName>
        <active>true</active>
        <description>Validation rule to prohibit the addition of Opportunity Products with the name containing &quot;YNG&quot; to Opportunities where there is not a Child with Product Eligibility set to &quot;YNG&quot;.</description>
        <errorConditionFormula>AND(
 Contact__c !=null,
OR(  
Contact__r.Product_Eligibility__c &lt;&gt;&quot;YNG&quot;)
,
  ISPICKVAL(Product2.Exclusive__c, &quot;YNG&quot;) 
)</errorConditionFormula>
        <errorMessage>You cannot associate a YNG product to an opportunity where the contact is not between the ages of 18 and 30</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>quantity_of_each_item_should_be_one</fullName>
        <active>true</active>
        <description>Quantity &gt; 1; quantity for each benefit item to be one</description>
        <errorConditionFormula>Quantity &gt;1</errorConditionFormula>
        <errorMessage>Quantity Cannot be more than One</errorMessage>
    </validationRules>
</CustomObject>